<resources>
    <string name="app_name">NotesManager</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="note_image">Note image</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Click here to login.</string>
    <string name="click_here_to_register">Don\'t have an account? Click here to register</string>
    <string name="login">Login</string>
    <string name="new_note">New note</string>
</resources>
