<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">
    <TextView android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView android:layout_width="wrap_content"
        android:text="@string/email"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <TextView android:layout_width="wrap_content"
        android:text="@string/repeat_password"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvLoginLink"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:text="@string/already_have_account"
        android:clickable="true"
        android:onClick="onClick"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:focusable="true" />

</LinearLayout>