<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvRegisterLink"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:text="@string/click_here_to_register"
        android:clickable="true"
        android:onClick="onClick"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:focusable="true" />
</LinearLayout>